v2017-01-30
  * apache:
      增加了一些autoindex
  * sysctl:
      增加了个人的sysctl 配置

v2017-01-11
  * bash & zsh:
      修改了一个出错信息未被忽略的错误
  * bash:
      增加了~/.bash_profile
  * zsh:
      暂时移除会导致终端退出的插件zsh-syntax-highlighting
      修改了iam 插件加载错误的问题
  * apache:
      增加了Arch Linux 下apache 配置文件
  * vsftpd:
      去除了配置文件的独立化设置

v2017-01-05.1
  * apache:
      使用Arch Linux 的包名作为目录名
      配置微调

v2017-01-05
  * vim:
      插件调整，https://github.com/Arondight/profile/issues/21

v2017-01-03.1
  * httpd:
      添加了缺失的.web 目录

v2017-01-03
  * bash & zsh:
      统一了bash 和zsh 的配置的风格
      修复了一些可能存在的问题
  * httpd:
      新增了一份httpd 文件浏览样式

v2016-12-01
  * grub2:
      增加了一个用于修复UEFI 下GRUB2 引导的脚本

v2016-11-22
  * hosts:
      增加了几个hosts

v2016-10-16
  * all:
      使用pushd/popd 替换了可能引发问题的cd 指令
      更好的.gitignore
  * vim:
      为内核模块查错进行准备

v2016-10-11.1
  * vim:
      为YouCompleteMe 添加JavaScript 和Rust 支持

v2016-10-11
  * vim:
      0x23..0x26, 0x40 不在作为单词的一部分
      YouCompleteMe 使用color_coded/build 目录下的高版本clang 根目录

v2016-10-08
  * bash & zsh:
      为curl 和wget 添加alisa
  * terminator:
      现在~ 也是单词的一部分了

v2016-09-13
  * vim:
      不再显式指定color_coded 调用clang 的-fcolor-diagnostics 参数

v2016-07-12.1
  * pacman:
      增加了几个XferCommand

v2016-07-12
  * bash & zsh:
      修改了alias
  * pacman:
      使用增量更新 \(^o^)/~

v2016-06-28
  * bash & zsh:
      rm/mv/ln/cp 增加-v 选择

v2016-06-28
  * bash & zsh:
      根据GPG 密钥自动配置GIT 仓库环境变量

v2016-06-22
  * nano:
      更新高亮配置

v2016-06-09
  * tmux:
      不再支持鼠标滚屏
      使用默认的Escape 键

v2016-05-23
  * zsh:
      更改了androidenv 的初始化脚本以适应更多系统
  * vim:
      更改了库搜索路径以适应更多系统

v2016-05-21
  * all:
      更改了可能导致配置文件权限不恰当的安装脚本
  * hosts:
      修改了错误的安装路径
  * vim:
      现在检查系统对libtinfo 库的支持

v2016-05-08
  * bash & zsh:
      现在loginTmux 不会attach 到错误的session 了
  * zsh:
      现在有选择的加载第三方插件

v2016-05-06.2
  * bash & zsh:
      修正了loginTmux 无法兼容bash 的问题
  * tmux:
      不再指定默认shell

v2016-05-06
  * bash & zsh:
      单独将tmux 相关的函数拉出一个插件
      在使用SSH 登陆时交互式地试图使用tmux 取代login shell