@@ -1,7 +1,7 @@
 这是一份自用的sysctl 配置文件。
 
 ```bash
-cp -r ./sysctl.conf ./sysctl.d/ /etc
+sudo cp -r ./sysctl.conf ./sysctl.d/ /etc
 sudo systemctl restart systemd-sysctl
 ```
 
