@@ -1,30 +1,4 @@
-Vim 配置文件，包含的特性：
-
-1. 代码实时智能补全
-+ 基于语义分析的当前窗口代码高亮
-+ 基于语义分析的变量定义跳转
-+ 实时错误提醒，包括语法、语义检查和部分的代码逻辑错误
-+ Git 增删改显示和上下跳转
-+ 光标快速跳转到窗口中任何一个位置
-+ 行尾空白字符高亮和一键去除
-+ 一键查找文件中的光标所在单词
-+ 内置Manual 手册，一键打开光标所在单词的Manual
-+ XML 标签高亮和快速跳转
-+ 自动的标准GNU 风格代码缩进
-+ 缩进线、80 字符线、光标十字定位
-+ 联通X11 程序的粘贴复制方式（Ctrl+C、Ctrl+V）
-+ 多光标同时输入
-+ 多文件、多窗口
-+ 平滑滚动
-+ 提供嵌入Vim 的终端模拟器
-+ 文件树浏览
-+ 标识符列表
-+ 最近文件列表
-+ 快速查找项目中所有文件
-+ 保护视力的配色
-+ 日历、画图和Vim 锁屏
-
-以上所有特性在Arch Linux 下正常，各种插件的依赖可能需要自己Hack。
-
 ![Vim](screenshots/vim.png?raw=true)
+
+> 从2016-01-05 开始，vim 配置致力于回归编辑器本职，不再提供重量级插件，也不再提供一些本应该由IDE 提供的功能。参见[#21](https://github.com/Arondight/profile/issues/21)。
 
