@@ -93,8 +93,6 @@ alias ping='env ping -c 20 -i 0.2'
 alias poweroff='env sudo env shutdown -h 0'
 alias halt='poweroff'
 alias reboot='env sudo env shutdown -r 0'
-# x11nvc 启动vncserver
-alias vnc-start='env x11vnc -display :0 -noxdamage -many -forever -ncache 10 -auth ~/.Xauthority -rfbauth ~/.vnc/passwd'
 # systemd
 alias logctl='journalctl'
 alias osctl='systemctl'
