@@ -1,0 +1,2 @@
+读取`~/.custom_shellrc`
+
